[gd_scene load_steps=4 format=2]

[ext_resource path="res://Font/Roboto/Roboto-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://MathQuestion.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 100
outline_color = Color( 0.0705882, 0.0666667, 0.0666667, 1 )
font_data = ExtResource( 1 )

[node name="MathQuestion" type="Node2D"]
script = ExtResource( 2 )

[node name="Num1" type="Label" parent="."]
unique_name_in_owner = true
margin_left = 520.0
margin_top = 247.0
margin_right = 560.0
margin_bottom = 266.0
custom_fonts/font = SubResource( 1 )
text = "00"
align = 1

[node name="Symbol" type="Label" parent="."]
unique_name_in_owner = true
margin_left = 682.0
margin_top = 247.0
margin_right = 874.0
margin_bottom = 445.0
rect_rotation = 0.55862
custom_fonts/font = SubResource( 1 )
text = "+"
align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Num2" type="Label" parent="."]
unique_name_in_owner = true
margin_left = 919.0
margin_top = 247.0
margin_right = 1111.0
margin_bottom = 445.0
custom_fonts/font = SubResource( 1 )
text = "00"
align = 1

[node name="EqualsSymb" type="Label" parent="."]
margin_left = 1072.0
margin_top = 247.0
margin_right = 1264.0
margin_bottom = 445.0
rect_rotation = 0.55862
custom_fonts/font = SubResource( 1 )
text = "="
align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="AnswerNum" type="Label" parent="."]
unique_name_in_owner = true
margin_left = 1216.0
margin_top = 247.0
margin_right = 1408.0
margin_bottom = 445.0
custom_fonts/font = SubResource( 1 )
text = "00"
align = 1
